# lecture

./: .gitignore  Makefile  pyproject.toml  pyrightconfig.json
api/v1/: urls.py
api/v1/lectures/: urls.py  views.py
apps/lecture/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/lecture/migrations/: 0001_initial.py  0002_alter_lecture_audio_file_alter_lecture_file_size.py  0002_lecture_file_hash_and_more.py  0002_lecturemarker.py  0003_alter_course_cover_alter_lecturer_photo.py  0003_lectureprogress.py  0004_alter_course_unique_together_course_code_and_more.py  0004_alter_lecture_duration.py  0005_currentlecture.py  0006_favoritelecture_lecturehistory.py  0007_lecture_event_lecture_year.py  0008_lectureprogress_updated_at_and_more.py  0009_alter_lecturer_options_lecturer_guru_lecturer_level_and_more.py
apps/lecture/services/: __init__.py  lecture_import.py
apps/lecture/templatetags/: time_filters.py  version_tags.py
apps/static/css/: admin.css  auth.css  base.css  components.css  (+4 more)
apps/system/: admin.py  apps.py  decorators.py  middleware.py  models.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/websocket/: apps.py  consumers.py  routing.py
lecture/: asgi.py  celery.py  settings.py  storage.py  urls.py  wsgi.py
templates/: base.html  course_player.html  home.html  lecture_player.html  lecturer_detail.html  lecturers_list.html  lectures_list.html  now_listening_list.html  topic_detail.html  topic_player.html  topics_list.html
templates/admin/: import_lectures.html
templates/users/: login.html  register.html
(+40 files in other folders)
